<resources>
    <string name="app_name">Hipla</string>
    <string name="powered">Powered by Hipla</string>
    <string name="application">Application</string>
    <string name="inventory">Inventory</string>
    <string name="pantry">PANTRY</string>
    <string name="feedback">FEEDBACK FORM</string>

    <string name="cancel">Cancel</string>
    <string name="continue_btn">Continue</string>
    <string name="register">Register</string>
    <string name="cheque_upload_photo">Upload Cheque Photo</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="congrats">Congratulations!</string>
    <string name="back">Back</string>

    <string name="cheque">Cheque</string>
    <string name="cheque_no">Cheque Number</string>
    <string name="your_cheque_photo">Your Cheque Photo</string>

    <string name="rtgs">RTGS</string>
    <string name="cash">Cash</string>
    <string name="demand_draft">DD</string>
    <string name="date">Date</string>
    <string name="amount_payable">Amount Payable*</string>
    <string name="pan">Pan Card Number*</string>
    <string name="cheque_upload_instruction">Take your cheque photo and upload to submit</string>

    <string name="channel_partner">Channel Partner</string>
    <string name="channel_partner_name">Channel Partner Name*</string>
    <string name="channel_partner_otp">Channel Partner OTP</string>
    <string name="channel_partner_mobile_no">Channel Partner Mobile No*</string>
    <string name="channel_partner_remark">Reference Id</string>

    <string name="customer_otp">Customer OTP</string>
    <string name="customer_first_name">Customer First Name*</string>
    <string name="customer_last_name">Customer Last Name*</string>
    <string name="customer_no">Customer Number*</string>
    <string name="floor_pref">Floor Preference</string>
    <string name="application_form">Application Form</string>
    <string name="payment_info">Payment information</string>
    <string name="enter_otp">Enter OTP</string>


    <string name="demo_otp_confirm_header">Confirmation for Application No: 1 \nCustomer name: Sreyansh Kumar \nChannel partner: Deepak Dev</string>
    <string name="enter_the_otp_info">Enter the OTP you just received via mobile</string>
    <string name="take_cheque_instruction">Take your proof and\nUpload to submit</string>
    <string name="verify_customer_otp">Verifying Customer OTP</string>
    <string name="verifying">Verifying</string>
    <string name="verify_channel_partner_no">Verifying Partner Mobile No</string>
    <string name="verify_channel_partner_otp">Verifying Partner OTP</string>

    <string name="application_confirm_customer_name">Customer Name : %1$s\n</string>
    <string name="confirm_channel_partner_no">Channel Partner Mobile No: %1$s\n</string>
    <string name="confirm_amount_payable">Amount Payable :%1$s\n</string>
    <string name="upload_dd">Upload DD Photo</string>
    <string name="upload_cheque">Upload Cheque Photo</string>
    <string name="your_rtgs_photo">Upload RTGS Photo</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="clear">Clear</string>
    <string name="okay">Okay</string>

    <string name="units">Units</string>
    <string name="floor">Floors</string>
    <string name="channel_partner_details">Channel Partner Details</string>

    <string name="inventory_success">Your booking is successful</string>
    <string name="inventory_confirm_msg">Unit : %1$s</string>

    <string name="application_success">Your application is successful</string>
    <string name="application_confirm_msg">Your application No : %1$s</string>

    <string name="application_confirm_application_no">Confirmation for Application No : %1$s\n</string>
    <string name="application_confirm_inventory_no">Confirmation for Booking of %1$s\n</string>

    <string name="select_floor">Select Block</string>

</resources>