<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:padding="@dimen/page_margin">

    <TextView
        android:id="@+id/header"
        style="@style/Hipla.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_otp_confirm_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/customerOtp"
        style="@style/Hipla.EditText"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_item_space"
        android:layout_marginTop="@dimen/application_otp_confirm_customer_top_margin"
        android:layout_marginBottom="@dimen/form_item_space"
        android:hint="@string/customer_otp"
        app:layout_constraintEnd_toStartOf="@id/channelPartnerOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <EditText
        android:id="@+id/channelPartnerOtp"
        style="@style/Hipla.EditText"
        android:layout_height="wrap_content"
        android:hint="@string/channel_partner_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/customerOtp"
        app:layout_constraintTop_toTopOf="@id/customerOtp" />

    <TextView
        android:id="@+id/submit"
        style="@style/PrimaryButton"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        tools:text="Register" />

    <TextView
        android:id="@+id/cancel"
        style="@style/SecondaryButton"
        android:layout_marginEnd="@dimen/form_item_space"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>