<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:padding="@dimen/page_margin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pageDivider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pageDivider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/header"
        style="@style/Hipla.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount_payable"
        style="@style/Hipla.EditText"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_item_space"
        android:layout_marginBottom="@dimen/form_item_space"
        android:hint="@string/amount_payable"
        app:layout_constraintVertical_weight="0.5"
        app:layout_constraintEnd_toStartOf="@id/pageDivider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <EditText
        android:id="@+id/chequeNumber"
        style="@style/Hipla.EditText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_item_space"
        android:layout_marginEnd="@dimen/form_item_space"
        android:hint="@string/cheque_no"
        app:layout_constraintEnd_toStartOf="@id/pageDivider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_payable" />

    <TextView
        android:id="@+id/date"
        style="@style/Hipla.EditText"
        android:gravity="center"
        android:drawablePadding="24dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="@id/pageDivider2"
        app:layout_constraintStart_toEndOf="@+id/pageDivider1"
        app:layout_constraintTop_toTopOf="@id/chequeNumber"
        app:drawableEndCompat="@drawable/icon_date"
        app:drawableTint="@color/primary" />

    <AutoCompleteTextView
        android:id="@+id/channel_partner_name"
        android:layout_marginTop="@dimen/form_item_space"
        android:hint="@string/channel_partner_name"
        style="@style/Hipla.AutoComplete"
        app:layout_constraintEnd_toEndOf="@id/chequeNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chequeNumber" />

    <TextView
        android:id="@+id/uploadCheque"
        style="@style/SecondaryButton"
        android:layout_marginEnd="@dimen/form_item_space"
        android:text="@string/cheque_upload_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Cancel" />


    <TextView
        android:id="@+id/cancel"
        style="@style/PrimaryButton"
        android:text="@string/cheque_upload_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/uploadCheque"
      />

</androidx.constraintlayout.widget.ConstraintLayout>