<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_pager_bg">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/pageDivider1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/pageDivider2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/applicationFlow"
            style="@style/Hipla.HomeScreenItemTitle"
            android:text="@string/application"
            app:layout_constraintBottom_toTopOf="@id/inventoryFlow"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/inventoryFlow"
            style="@style/Hipla.HomeScreenItemTitle"
            android:text="@string/inventory"
            app:layout_constraintBottom_toTopOf="@+id/pantryFlow"
            app:layout_constraintTop_toBottomOf="@id/applicationFlow"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/pantryFlow"
            style="@style/Hipla.HomeScreenItemTitle"
            android:text="@string/pantry"
            app:layout_constraintBottom_toBottomOf="@+id/feedbackFlow"
            app:layout_constraintTop_toBottomOf="@id/inventoryFlow"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/feedbackFlow"
            style="@style/Hipla.HomeScreenItemTitle"
            android:text="@string/feedback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pantryFlow"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>