<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="40dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/close" />

    <ImageView
        android:layout_width="370dp"
        android:id="@+id/chequePhoto"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cheque_photo_bg"
        android:layout_height="200dp">
    </ImageView>

    <TextView
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/chequePhoto"
        android:padding="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/payment_title"
        android:background="@drawable/your_cheque_bg"
        android:textColor="@color/primary_dark"
        app:layout_constraintStart_toStartOf="@id/chequePhoto"
        app:layout_constraintEnd_toEndOf="@id/chequePhoto"
        android:text="@string/your_cheque_photo"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/cameraIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/chequePhoto"
        android:src="@drawable/icon_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/upload_cheque_instruction_bg"
        app:layout_constraintBottom_toBottomOf="@id/cheque_instruction"
        app:layout_constraintEnd_toEndOf="@id/chequePhoto"
        app:layout_constraintStart_toStartOf="@id/chequePhoto"
        app:layout_constraintTop_toTopOf="@id/cheque_instruction" />

    <TextView
        android:id="@+id/cheque_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:padding="8dp"
        android:text="@string/take_cheque_instruction"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/icon_bulb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/payment_title" />

    <TextView
        android:id="@+id/upload"
        style="@style/PrimaryButton"
        android:layout_marginTop="32dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@id/cheque_instruction"
        app:layout_constraintEnd_toEndOf="@id/chequePhoto"
        app:layout_constraintStart_toStartOf="@id/chequePhoto" />


</androidx.constraintlayout.widget.ConstraintLayout>