<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="24dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pageDivider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pageDivider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="@id/pageDivider2"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/close" />

    <ImageView
        android:id="@+id/successIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/congrats"
        android:textColor="@color/booking_success"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pageDivider2"
        app:layout_constraintStart_toStartOf="@id/pageDivider1"
        app:layout_constraintTop_toBottomOf="@id/successIcon" />

    <TextView
        android:id="@+id/flow_success_title"
        style="@style/Hipla.Header"
        android:layout_width="0dp"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/pageDivider2"
        app:layout_constraintStart_toStartOf="@id/pageDivider1"
        app:layout_constraintTop_toBottomOf="@id/congrats" />

    <TextView
        android:id="@+id/app_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/application_confirm_msg"
        android:textColor="@color/booking_success"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pageDivider2"
        app:layout_constraintStart_toStartOf="@id/pageDivider1"
        app:layout_constraintTop_toBottomOf="@id/flow_success_title" />

    <TextView
        android:id="@+id/okay"
        style="@style/PrimaryButton"
        android:text="@string/okay"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/app_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
 />


</androidx.constraintlayout.widget.ConstraintLayout>